# cool_tetris

./: .gitignore  CMakeLists.txt  game_logic.cpp  game_logic.h  game_widget.cpp  game_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  tetris.cpp  tetris.h  tetrisengine.cpp  tetrisengine.h  tetromino.cpp  tetromino.h
TetrisClient/: CMakeLists.txt  build_static.bat
TetrisClient/src/: main.cpp
TetrisClient/src/core/: game_logic.cpp  game_logic.h
TetrisClient/src/network/: network_managerv2.cpp  network_managerv2.h
TetrisClient/src/settings/: setting_manager.cpp  setting_manager.h
TetrisClient/src/ui/: mainwindow.cpp  mainwindow.h
TetrisClient/src/ui/ingame/: fild_widget.cpp  game_over_widget.cpp  game_over_widget.h  game_widget.cpp  game_widget.h  overlay_widget.cpp  overlay_widget.h  pause_widget.cpp  pause_widget.h
TetrisClient/src/ui/menus/: menu_widget.cpp  menu_widget.h  setting_widget.cpp  statistic_widget.cpp  statistic_widget.h
TetrisClient/src/ui/menus/Authorization/: login_form.cpp  login_form.h  login_form.ui  registrate_form.cpp  registrate_form.h  registrate_form.ui  user_widget.cpp  user_widget.h
TetrisServer/: CMakeLists.txt  Dockerfile  all_run.bat  db_redis_only.bat  docker-compose.override.yaml  docker-compose.yaml  exampleenv.txt  resources.qrc
TetrisServer/html/: index.html
TetrisServer/secure/: readme.txt
TetrisServer/src/: main.cpp
src/core/: game_logic.cpp  game_logic.h
src/ui/: fild_widget.cpp  game_widget.cpp  game_widget.h  mainwindow.cpp  mainwindow.h
src/ui/ingame/: fild_widget.cpp  game_widget.cpp  game_widget.h  pause_widget.cpp  pause_widget.h
